Bug 428940 - Investment Quantities Not Sorting Properly
Summary: Investment Quantities Not Sorting Properly
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-10 18:37 UTC by bryan.williams7889
Modified: 2024-12-19 10:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bryan.williams7889 2020-11-10 18:37:18 UTC
STEPS TO REPRODUCE
1. Go to the "Investments" Screen 
2. Sort by Quantity.

OBSERVED RESULT

Quantities sort as such: 1, 10, 11, 12, ..., 2, 20, 21, 22, ...
The opposite is true sorting descending.

EXPECTED RESULT

Quantities should sort as: 1, 2, 3, 4, ... , 9, 10, 11, 12, ... 19, 20, 21, 22, ...
Or the opposite if sorting descending.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.1
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Kernel Version: 5.4.72-1-lts
OS Type: 64-bit

ADDITIONAL INFORMATION
N/A
Comment 1 Jack 2020-11-10 20:52:16 UTC
It's a known problem, but I'll have to check later for a duplicate bug.   It's sorting alpha instead of numeric.
Comment 2 Wei Qi Ong 2021-05-02 04:34:48 UTC
Looks like regression of 332924 
https://bugs.kde.org/show_bug.cgi?id=332924

It is happening for the Value column as well, my version 5.1.1-fa0b69e8e
Comment 3 Bug Janitor Service 2021-08-09 05:39:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/office/kmymoney/-/merge_requests/113
Comment 4 Thomas Baumgart 2021-08-18 21:34:35 UTC
Git commit 819f260084b7e29713ce6fec1efcd0946c427740 by Thomas Baumgart, on behalf of Wei Qi Ong.
Committed on 18/08/2021 at 19:40.
Pushed by tbaumgart into branch 'master'.

Investment view, Equities: sort by actual value instead of display value
Related: bug 332924

M  +22   -3    kmymoney/models/equitiesmodel.cpp
M  +1    -0    kmymoney/views/kinvestmentview_p.h

https://invent.kde.org/office/kmymoney/commit/819f260084b7e29713ce6fec1efcd0946c427740
Comment 5 Thomas Baumgart 2023-01-14 05:53:18 UTC
Git commit 68b81627958ee33b26301b674207da47d065f6f8 by Thomas Baumgart.
Committed on 14/01/2023 at 05:53.
Pushed by tbaumgart into branch '5.1'.

Investment view, Equities: sort by actual value instead of display value

Backporting commit 819f2600 to stable 5.1 branch
Related: bug 332924

M  +28   -1    kmymoney/models/equitiesmodel.cpp
M  +2    -1    kmymoney/models/equitiesmodel.h

https://invent.kde.org/office/kmymoney/commit/68b81627958ee33b26301b674207da47d065f6f8