Investment view, Equities: sort by actual value instead of display value

BUG: 428940
BUG: 332924